feat: Update project structure and styling
Refactor imports to use `.tsx` extensions and update the background color of the main page. Additionally, include the entry script in `index.html` to ensure proper application loading.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         body {
             margin: 0;
             overflow: hidden;
-            background: #0a1a2f;
+            background: #050b14;
             font-family: 'Noto Serif SC', serif;
         }
         .font-festive {
@@ -31,5 +31,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- 必须添加这个入口脚本，否则页面不会加载任何内容 -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
